--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,3 @@
-<!--
-* CoreUI Pro - Angular Admin Template
-* @version v2.5.2
-* @link https://coreui.io/pro/angular/
-* Copyright (c) 2018 creativeLabs Łukasz Holeczek
-* License (https://coreui.io/pro/license)
--->
 <!doctype html>
 <html>
 <head>
@@ -17,7 +10,7 @@
   <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
 	<link rel="shortcut icon" href="assets/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-	<title>CoreUI Pro Angular Admin Template</title>
+	<title>Amalia Entertainment & Event</title>
 </head>
 <body class="app">
   <!-- App Loading... -->
