--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="CoreUI Pro Angular Admin Template">
   <meta name="author" content="Łukasz Holeczek">
   <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
-  <link rel="shortcut icon" href="assets/favicon.ico">
+  <link rel="shortcut icon" href="assets/amalia.jpg">
   <!-- CSS only -->
   
   <title>Amalia Entertainment & Event</title>
